--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
