--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
     "react-slot-counter": "^2.2.5",
+    "react-snowfall": "^1.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
